# UD

./: .gitignore  CMakeLists.txt  addrecord.cpp  addrecord.h  addrecord.ui  anothertable.cpp  anothertable.h  anothertable.ui  changerecord.cpp  changerecord.h  changerecord.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  print.cpp  print.h  print.ui  printgraph.cpp  printgraph.h  printgraph.ui  result.docx  Отчёт
